# AutoOSW

./: .gitignore  CMakeLists.txt  DownloadManager.hpp  ManifestManager.cpp  ManifestManager.hpp  README.md  steamworks_dumper_lib.patch
include/: CallbackMap.hpp  ClassMap.hpp  EMsgMap.hpp  ExtractionManager.hpp  HeaderManager.hpp  JsonManager.hpp  ManifestManager.hpp
src/: CallbackMap.cpp  ClassMap.cpp  DownloadManager.cpp  EMsgMap.cpp  ExtractionManager.cpp  HeaderManager.cpp  JsonManager.cpp  ManifestManager.cpp  main.cpp
